static/css/style.css
/* !! Style for fonts and text classes !! */

body {
    font-family: 'Quicksand', sans-serif;
}

.txt-white {
    color: white;
}

.txt-yellow {
    color: #FBBF34;
}

.txt-green {
    color: #2f8f17;
}

.txt-orange {
    color: #FFA14A;
}


.txt-shadow-y {
    text-shadow: 1px 1px 1px #FBBF34;
}

/* !! Style for backgrounds classes !! */

.bck-grd-black {
    background-color: #181818;
}

.bck-grd-gray {
    background-color: #F0F0F0;
}

/* !! Style for buttons !! */

/* Three different buttons, for use all website (except forms submitions) */

.btn-one {
    background-color: #FF6607;
    border: 1px solid #181818;
    border-radius: 8px;
    font-size: 24px;
    font-weight: bold;
}

.btn-one:hover {
    background-color: #ff660700;
    border: 1px solid #FF6607;
    color: #FF6607;
}

.btn-two {
    background-color: #ff660700;
    border: 1px solid #FF6607;
    border-radius: 8px;
    color: #FF6607;
    font-size: 24px;
    font-weight: bold;
}

.btn-two:hover {
    background-color: #FF6607;
    color: #F0F0F0;
    border: 1px solid #F0F0F0;
}

.btn-three {
    color: #FF6607;
    font-weight: bold;
}

.btn-three:hover {
    color: #FFA14A;
}

/* Button and Image style to card element (car and event) */

#btn-go:hover {
    color: #2f8f17;
}

#btn-maybe:hover {
    color: #FFA14A;
}

#btn-fav:hover {
    color: #FBBF34;
}

.btn-card {
    background-color: #FBBF34;
    font-weight: bold;
}

.btn-card:hover {
    background-color: #fbbf3483;
    border: 1px solid #FBBF34;
}

.image-container {
    position: relative;
}

.image-flash {
    position: absolute;
    border: 1px solid rgba(0, 0, 0, 0.26);
    border-radius: 4px;
    bottom: 0%;
    left: 0%;
    background-color: #00000080;
}

.hover-txt {
    visibility: hidden;
    max-height: 0;
    padding: 0 8px 0 8px;
}

.image-flash:hover .hover-txt {
    visibility: visible;
    max-height: fit-content;
    padding: 4px 8px 0 8px;
}

.detail-box {
    border: 1px solid #181818;
}

/* !! Style for navbar elements !! */

.hover-link {
    border-radius: 10px;
}

.hover-link:hover {
    background-color: #FFA14A;
}

/* !! Style for footer elements !! */

#footer-line {
    background-color: #FF6607;
    width: auto;
    height: 8px;
}

.social-list {
    border: 1px solid #FF6607;
}

.social-link {
    color: #FF6607;
    font-size: 30px;
    padding: 10px;
}

.social-link:hover {
    color: #FFA14A;
    text-shadow: 1px 2px 2px black;
}

.list-clear {
    list-style: none;
}

.footer-link {
    text-decoration: none;
    color: black;
}

.footer-link:hover {
    color:#FFA14A
}

/* !! Style for each page elements !! */

/* Index page style */

.hero-image {
    background-image: url('https://res.cloudinary.com/guisgrande/image/upload/v1659453663/static/images/autoclassic-hero.77d487db14c6.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.glass-bck {
    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border-radius: 5px;
    border:1px solid rgba(255, 255, 255, 0.5);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
}

/* !! Media queries !! */

@media screen and (max-width: 400px) {

/* Querie for navbar elements */
#logo {
    width: 140px;
    height: auto;
}

/* Querie for footer elements */
.list-web-link {
    padding: 5px;
}

.list-web-link>li>a {
    font-size: 12px;
}

.social-link {
    font-size: 20px;
    padding: 8px;
}

/* Querie for forms elements */

/* Querie for add car and event form */
/* id_description - same id for both text field forms */
#id_description {
    width: 181px;
}

#id_event_image {
    font-size: 12px;
}

#id_car_image {
    font-size: 12px;
}

}

